force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/ASR_Report_Log__c.object-meta.xml
<CustomObject>
    <description>Report Log for Advanced Input Bindings</description>
    <label>Report Log</label>
    <pluralLabel>Report Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Report Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>RL-{0000}</displayFormat>
    </nameField>
</CustomObject>