force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>