force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Text</type>
    <length>50</length>
</CustomField>