force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/fields/Generated_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_URL__c</fullName>
    <label>Generated URL</label>
    <type>Url</type>
</CustomField>