force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/fields/Include_Charts__c.field-meta.xml
<CustomField>
    <fullName>Include_Charts__c</fullName>
    <label>Include Charts</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>