force-app/main/02_actionConfiguration/advancedInputBindings/objects/ASR_Report_Log__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>